fixed schedules runs and duplication checks

--- a/scraper/dockerfile
+++ b/scraper/dockerfile
@@ -1,5 +1,10 @@
 FROM python:3.9-slim-buster
 
+ARG PROJECT_ID
+
+ENV PROJECT_ID=${PROJECT_ID}
+ENV PORT=8080
+
 WORKDIR /app
 
 COPY requirements.txt .
@@ -7,4 +12,4 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
-CMD ["python", "main.py"]
+CMD exec functions-framework --target=run_pipeline --port=${PORT}
